--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "pg": "^8.4.2"
+    "pg": "^8.4.2",
+    "request": "^2.88.2"
   }
 }
